--- a/ch07_exec_dreamjeju/css/jeju.css
+++ b/ch07_exec_dreamjeju/css/jeju.css
@@ -117,6 +117,13 @@ footer {
     padding: 5px 20px;
     border-right: 2px solid #bbb;
 }
+#botmmenu li:last-child {
+    display: inline;
+    padding: 5px 20px;
+    border-right: 2px solid transparent;
+}
+
+
 
 #botmmenu li a {
     color: black;
